add book back item

--- a/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
@@ -341,20 +341,19 @@ Die einzelnen Datenfelder innerhalb des Portlets können jedoch nicht mehrfach h
 
 NEU Ansicht test
 Einstellungen aufklappen
-Slider *Portlet eingeklappt*
-Die Namen der Portlets können individualisiert werden. Gib bei Titel einen neuen Namen für dein Portlet ein. 
-Darunter: # Kacheln pro Zeile
-. Wähle aus: Keine Einschränkung, Eine Kachel bis 6 Kacheln - je nach Wahl der Anzahl der Kacheln wird das Portlet dargestellt
 
-Elemente aufklappen
-Die möglichen Felder können per Drag&Drop dem Portlet hinzugefügt werden. Im Portlet kannst du sie löschen, um sie wieder zurück in den rechten Bereich zu schieben.
+Slider *Portlet eingeklappt*
+Die Namen der Bereiche können individualisiert werden. Gib im Datenfeld Titel einen neuen Namen für deinen Bereich ein. 
+Darunter: # Kacheln pro Zeile
+. Wähle aus: Keine Einschränkung, Eine Kachel bis 6 Kacheln - je nachdem, wie viele Kacheln du wählst, wird der Bereich dargestellt
+
+. Klappe Elemente auf.
+Die enthaltenen Elemente = Bereiche können per Drag & Drop hinzugefügt werden. Im Bereich kannst du sie löschen, um sie wieder zurück in die Auswahl der Elemente zu schieben.
 Artikelmenge
 
-
-Portlets
-siehe Detailansicht Gestaltung bei Artikel
-Auf der neuen Aufträge UI sind die Informationen in Portlets aufgeteilt.
-Oberhalb der Portlets werden neben Dashboard links weitere Tabs angezeigt, z.B. *Aufträge*, *Einrichtung*, *Kontakte*, und man kann schnell von einem zum anderen wechseln.
+// TODO: siehe Detailansicht Gestaltung bei Artikel
+Auf der neuen Aufträge UI sind die Informationen in Bereiche aufgeteilt.
+Oberhalb der Bereiche werden neben Dashboard links weitere Tabs angezeigt, z.B. *Aufträge*, *Einrichtung*, *Kontakte*, und man kann schnell von einem zum anderen wechseln.
 
 Dashboard
 Über icon:more_vert[set=material] öffnet sich das KontextmenÜ:
@@ -370,7 +369,7 @@ Das eigene Portlet unterscheidet sich von den vorgefertigten Portlets in zwei wi
 * kann beliebig oft hinzugefügt werden.
 * enthält alle Artikeldatenfelder und nicht nur eine Teilmenge, wie es bei den vorgefertigten Portlets der Fall ist.
 
-Dank eigener Portlets bist du nicht auf die vorgefertigten Einstellungen angewiesen. Du kannst stattdessen selbst entscheiden, welche Einstellungen ein Portlet enthalten soll. Du kannst die Portlets zudem anders benennen. In der Seitennavigation
+Dank eigener Portlets bist du nicht auf die vorgefertigten Einstellungen angewiesen. Du kannst stattdessen selbst entscheiden, welche Einstellungen ein Portlet enthalten soll. Du kannst die Portlets zudem anders benennen. In der Seitennavigation links werden dir die Bezeichnungen der Portlets angezeigt. Über icon:settings[set=material] kannst du die Spalten der Portlets konfigurieren.
 
 [discrete]
 ==== Anwendungsbeispiel
@@ -388,10 +387,11 @@ image::artikel/neue-ui/assets/detailansicht-eigene-portlets.png[]
 === Verfügbare Portlets und Datenfelder
 
 // TODO: Einleitung - Auftragstypen später im Text
-Über den Portlets eines geöffneten Auftrags sind die Icons
+Über den Portlets eines geöffneten Auftrags findest du die Optionen:
 Speichern: icon:save[set=material] 
 Sperren/Entsperren
-Warenkorb Aufträge erstellen, Trichter Auftrag teilen.
+Warenkorb Aufträge erstellen, 
+Trichter Auftrag teilen.
 
 Folgende Auftragstypen lassen sich an dieser Stelle anlegen:
 Gewährleistung: Für alle Positionen, Für bestimmte Positionen
@@ -400,7 +400,7 @@ Lieferauftrag: Automatisch aufteilen, Für bestimmte Positionen
 Retoure: Für bestimmte Positionen
 
 ////
-nicht alle Portlets werden initial mit Daten geladen (Datenlast reduzieren) - nachfragen
+nicht alle Portlets werden initial mit Daten geladen (Datenlast reduzieren) - nachfragen was das bedeutet
 https://knowledge.plentymarkets.com/de-de/manual/main/crm/kontakt-bearbeiten.html#erlaeuterungen-einzelne-bereiche
 ////
 
@@ -451,7 +451,8 @@ Im Portlet *Status und Tags* siehst du...
 |Wähle den Auftragsstatus aus Dropdown-Liste.
 
 | *Tags*
-|Wähle den Tag des Auftrags. Es können mehrere Tags per Dropdown-Liste ausgewählt werden.
+|Der aktuelle Tag wird angezeigt.
+|Wähle den Tag des Auftrags aus der Dropdown-Liste.
 
 Auswahl bei Tags:
 * Auftrags-Tag
@@ -478,27 +479,28 @@ Im Portlet *Adressen* siehst du alle Informationen zu Rechnungs- und Lieferadres
 | *Lieferung* 
 |Lieferadresse mit Land und ID (VAT fehlt)
 
-Im Kontextmenü kannst du folgende Informationen sehen oder eingeben.
 // TODO: wie richtig darstellen?
 Adressangaben
-Anrede
-Firma (Name 1)
-Vorname
-Nachname
-Zusatz
-Adresse 1 (Straße)
-Adresse 2 (Hausnummer)
-Adresse 3 (Adresszusatz?
-Adresse 4 (Frei)
-Postleitzahl
-Ort
-Land - Dropdown
-Region/Bezirk - Dropdown
+* Anrede
+* Firma (Name 1)
+* Vorname
+* Nachname
 
-Adressoptionen:
-E-Mail
-Telefon
-Typ: Umsatzsteuernummer, Externe Adress-ID, Gelangensbestätigung, Postnummer, Personennummer, FSK, Geburtstag, Titel, Ansprechpartner, Externe Kunden-ID
+Zusatz
+* Adresse 1 (Straße)
+* Adresse 2 (Hausnummer)
+* Adresse 3 (Adresszusatz)
+* Adresse 4 (Frei)
+* Postleitzahl
+* Ort
+* Land - Dropdown
+* Region/Bezirk - Dropdown
+
+Adressoptionen
+* E-Mail
+* Telefon
+* Typ: 
+Umsatzsteuernummer, Externe Adress-ID, Gelangensbestätigung, Postnummer, Personennummer, FSK, Geburtstag, Titel, Ansprechpartner, Externe Kunden-ID
 eingeben und speichern
 |====
 
@@ -666,7 +668,7 @@ Dies ist eine optionale Spalte.
 
 [#portlet-payment-terms]
 === Portlet Zahlungsbedingungen
-Im Portlet *Zahlungsbedingungen* siehst du die Werte *Zahlungsziel (Tage)*, *Valuta (Tage)*, *Skonto (Tage)* und *Skonto (%)* werden die Zahlungsbedingungen gestaltet.
+Im Portlet *Zahlungsbedingungen* siehst du die Werte *Zahlungsziel (Tage)*, *Valuta (Tage)*, *Skonto (Tage)* und *Skonto (%)* werden die Zahlungsbedingungen dargestellt.
 
 [[table-payment-terms]]
 .Zahlungsbedingungen
@@ -682,14 +684,20 @@ Im Portlet *Zahlungsbedingungen* siehst du die Werte *Zahlungsziel (Tage)*, *Val
 
 | *Valuta (Tage)*
 |Die Valuta wird angezeigt. +
+|====
 
 *_Wichtig_*: Möchtest du Valuta und Skonto nutzen, muss ein Zahlungsziel angeben sein. Wenn für Zahlungsziel nichts oder der Wert 0 eingetragen ist, sind die Zahlungsbedingungen nicht gültig und werden auch nicht auf Dokumenten übernommen. +
-|====
 
 
 [#portlet-bank-data]
 === Portlet Bankdaten
 Im Portlet *Bankdaten* kannst du über Icon + die Bankddaten eingeben, durch Klick auf + öffnet sich ein Fenster *Neue Bankdaten*. Dort kannst du die erforderlichen Daten eingeben. Felder mit Stern sind Pflichtfelder.
+
+[[table-bank-data]]
+.Bankdaten
+[cols="1,3"]
+|====
+|Einstellung|Erläuterung
 
 | *IBAN* 
 |Gib die *IBAN* ein. +
@@ -725,7 +733,8 @@ Dieses Feld ist ein optionales Feld.
 | *Land der Bank*
 |Wähle das *Land der Bank* aus der Dropdown-Liste.
 
-Icon Schieberegler, um das *SEPA-Lastschriftmandat* zu aktivieren.
+// TODO: wie anordnen?
+|Icon Schieberegler, um das *SEPA-Lastschriftmandat* zu aktivieren.
 Wenn das aktiviert ist, öffnet sich ein neuer Bereich darunter.
 
 | *SEPA-Lastschriftmandat*
@@ -740,12 +749,12 @@ Du kannst das Datum ändern duch Eingabe
 |====
 
 
-[#portlet-payment-ref]
+[#portlet-assigned-payments]
 === Zugeordnete Zahlungen
 Im Portlet *Zugeordnete Zahlungen* siehst du...
-Über + kannst du *Zahlung erstellen*. Über Zahnrad *Spalten konfigurieren*
+Über + kannst du *Zahlung erstellen*. Über icon:settings[set=material] kannst du die *Spalten konfigurieren*
 
-[[table-payment-ref]]
+[[table-assigned-payments]]
 .Zugeordnete Zahlungen
 [cols="1,3"]
 |====
@@ -761,19 +770,19 @@ Im Portlet *Zugeordnete Zahlungen* siehst du...
 |Der Betrag *Offen* wird angezeigt.
 
 Spalten
-Zahlungs-ID
-Eltern-ID
-Auftrags-ID
-Kunden-ID
-Zahlungsart
-Soll/Haben
-Betrag
-Status 
-Verwendungszweck
-Absender der Zahlung
-Eingangsdatum
-Importiert
-Aktion
+* Zahlungs-ID
+* Eltern-ID
+* Auftrags-ID
+* Kunden-ID
+* Zahlungsart
+* Soll/Haben
+* Betrag
+* Status 
+* Verwendungszweck
+* Absender der Zahlung
+* Eingangsdatum
+* Importiert
+* Aktion
 |====
 
 [#portlet-order-referrer]
@@ -850,9 +859,14 @@ Im Portlet *Eigenschaften* siehst du...
 [#portlet-documents]
 === Portlet Dokumente
 Im Portlet *Dokument* siehst du *Alle Dokumente* und *Archvierte Dokumente*.
-Über Icon Zahnrad Spalten konfigurieren
+
 Icons Suchen, ? und *Gespeicherte Filter*.
 Über Dokument + kannst du ein neues *Dokument erstellen*.
+Über Symbol Trichter öffnet sich Pop-up Fenster
+Erstellt am Symbol Kalender
+Aktualisiert am Symbol Kalender
+Datum anzeigen am Symbol Kalender
+Über Suchen kann Suche ausgeführt werden
 
 [[table-documents]]
 .Dokumente
@@ -877,18 +891,12 @@ Icons Suchen, ? und *Gespeicherte Filter*.
 
 | *Archivierte Dokumente*
 |Im Ordner *Archivierte Dokumente* finden sich: 
-Lieferschein
-Bestellbestätigung
-Gelangensbestätigung
-Proformarechnung
-Abhollieferung
-Rücksendeschein
-
-Über Symbol Trichter öffnet sich Pop-up Fenster
-Erstellt am Symbol Kalender
-Aktualisiert am Symbol Kalender
-Datum anzeigen am Symbol Kalender
-Über Suchen kann Suche ausgeführt werden
+* Lieferschein
+* Bestellbestätigung
+* Gelangensbestätigung
+* Proformarechnung
+* Abhollieferung
+* Rücksendeschein
 
 Über Symbol + kannst du ein neues Dokument erstellen
 * Rechnung 
@@ -926,7 +934,109 @@ Datum anzeigen am Symbol Kalender
 
 | *Aktionen*
 |Über die 3 Punkte Symbol Herunterladen
+|====
 
+
+[#portlet-history]
+=== Portlet Historie
+Im Portlet *Historie* siehst du...
+
+[[table-history]]
+.Historie
+[cols="1,3"]
+|====
+|Einstellung|Erläuterung
+
+| *Datum*
+|Das *Datum* wird mit Uhrzeit angezeigt.
+
+| *Benutzer*
+|Der *Benutzer* wird angezeigt.
+
+| *Aktion*
+|Die durchgeführte *Aktion* wird angezeigt.
+
+| *Status*
+|Der aktuelle *Status* wird angezeigt.
+|====
+
+
+[#portlet-book-back-item]
+=== Portlet Waren zurückbuchen
+Das Portlet *Waren zurückbuchen* lässt sich öffnen, wenn du in einer *Retoure* auf *Waren zurückbuchen* gehst. Über icon:input[set=material] kannst du das Portlet öffnen. Es erscheint nach dem Anlegen auch links in der Seitennavigation. In einer Retoure ist das Icon icon:input[set=material] immer zu sehen. In einem Auftrag oder einer Garantie siehst du es nur dann, wenn ein versandter Artikel hinterlegt ist.
+
+//// 
+in Entwicklung, erklären lassen; 
+Auftrag & Garantie: Only visible if a outgoing item is set, 
+Retoure: always visible.
+
+siehe auch https://knowledge.plentymarkets.com/de-de/manual/main/warenwirtschaft/mhd-charge-verwalten.html und https://knowledge.plentymarkets.com/de-de/manual/main/warenwirtschaft/warenbestaende-verwalten.html#100 bzw. mdh_charge_verwalten.adoc
+https://knowledge.plentymarkets.com/de-de/manual/main/warenwirtschaft/praxisbeispiel-bestand-umbuchen.html
+
+siehe Bestand überwachen Kap. 4.1 MDH und Charge sowie Ware einbuchen
+
+3 striche mit +; Warenkorb +; Spalten konfigurieren
+//// 
+
+
+[[table-book-back-item]]
+.Waren zurückbuchen
+[cols="1,3"]
+|====
+|Einstellung|Erläuterung
+
+2+^| *Artikel*
+
+| *Menge*
+|Die *Menge* wird angezeigt.
+
+| *Offene Menge*
+|Die *Offene Menge* wird angezeigt.
+
+| *Charge*
+|Die *Charge* wird angezeigt.
+
+| *Mindesthaltbarkeitsdatum (MHD)*
+|Das *MHD* wird angezeigt.
+
+| *Artikel-ID*
+|Die *Artikel-ID* wird angezeigt.
+
+| *Varianten-ID*
+|Die *Varianten-ID* wird angezeigt.
+
+| *Artikelname*
+|Die *Artikelname* wird angezeigt.
+
+2+^| *Warenkorb*
+
+| *reverse* (display field)
+|Die
+(validation: reverse cannot be higher than open quantity
+
+| *Lager* (single select)
+|Die
+
+| *Lagerort* (see purchase order transactions)
+|Die
+
+| *Menge im Auftrag* (display field)
+|Die
+
+| *Charge* (display field)
+|Die
+
+| *Mindesthaltbarkeitsdatum (MHD)* (display field)
+|Die
+
+| *Artikel-ID* (display field)
+|Die *Artikel-ID* wird angezeigt.
+
+| *Varianten-ID* (display field)
+|Die *Varianten-ID* wird angezeigt.
+
+| *Variantenname* (display field)
+|Die *Variantenname* wird angezeigt.
 |====
 
 
@@ -955,12 +1065,10 @@ In der Dropdown-Liste hast du auch die Möglichkeit eine neue Lieferadresse einz
 |*Zahlungsart*
 |Wenn im Kontakt eine Zahlungsart definiert ist, zum Beispiel über eine xref:ccrm:kontakte-verwalten.adoc#15[Kundenklasse], ist diese vorausgewählt. Ansonsten kannst du eine Zahlungsart eingeben und dann auswählen. Angeboten werden dir alle Zahlungsarten, die bereits in deinem plentymarkets-System integriert sind. +
 Nutzt du eine xref:auftraege:auftraege-verwalten.adoc#295[Auftragsvorlage], wird die Zahlungsart der Auftragsvorlage genommen, sobald du die Vorlage für den Auftrag auswählst. Danach ist die Zahlungsart manuell anpassbar.
-// TODO: alle xref prüfen/anpassen
 
 |*Rabatt in %*
 |Du kannst hier manuell einen prozentualen Rabatt eingeben, der auf alle Auftragspositionen des Auftrags angewendet wird. Der eingegebene Wert muss zwischen 0 und 100 liegen, Werte im Minusbereich sind nicht erlaubt. +
 Es ist ein Rabatt voreingetragen, wenn der Kontakt zu einer Kundenklasse gehört, in der die Option *Standardrabatt für manuelle Aufträge* mit einem Wert gefüllt ist. Du findest diese Option im Bereich xref:crm:kontakte-verwalten.adoc#intable-kundenklasse-rabattart[Rabattart] im Menü *Einrichtung » CRM » Kundenklassen*. Der voreingetragene Wert in den Auftragsdetails ist anpassbar.
-// TODO: alle xref prüfen/anpassen
 
 |*Währung*
 |Die xref:payment:waehrungen.adoc#30[Systemwährung] ist vorausgewählt. Über die Dropdown-Liste kannst du die Währung für den Auftrag anpassen.
@@ -972,7 +1080,6 @@ Es ist ein Rabatt voreingetragen, wenn der Kontakt zu einer Kundenklasse gehört
 
 |*Mandant*
 |Wähle aus der Dropdown-Liste den Mandanten aus, für den dieser Auftrag gelten soll. Vorausgewählt ist entweder der Mandant aus den Kontaktdaten oder als nächste Option ein xref:auftraege:auftraege-verwalten.adoc#intable-standard-mandant[Standard-Mandaten], wenn du diesen festgelegt hast.
-// TODO: alle xref prüfen/anpassen
 
 |*Eigner*
 |Wähle aus der Dropdown-Liste den Eigner für diesen Auftrag aus. Hast du einen xref:auftraege:auftraege-verwalten.adoc#intable-standard-eigner[Standard-Eigner] gesetzt, ist dieser vorausgewählt. Ansonsten werden dir in der Dropdown-Liste nur Eigner angezeigt, die das Benutzerrecht Aufträge zu erstellen und zu bearbeiten haben.
@@ -1034,6 +1141,7 @@ Gehe folgendermaßen vor, um die Standardeinstellungen vorzunehmen:
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<table-default-settings-order-contact>>.
 . *Speichere* (icon:save[role="green"]) die Einstellungen.
 
+// TODO: alle xref prüfen/anpassen
 [[table-default-settings-order-beta]]
 .Standardeinstellungen für die neue Auftragsanlage (beta)
 [cols="1,3"]
@@ -1049,7 +1157,6 @@ Gehe folgendermaßen vor, um die Standardeinstellungen vorzunehmen:
 |[#intable-standard-herkunft]*Standard-Herkunft*
 |Die gewählte Standard-Herkunft ist beim Anlegen des neuen Auftrags oder Angebots vorausgewählt, wenn in den Kontaktdaten keine Herkunft hinterlegt ist. Ist in den Kontaktdaten eine Herkunft hinterlegt, hat diese Priorität.
 
-// TODO: alle xref prüfen/anpassen
 |[#intable-standard-vorlage]*Standard-Auftragsvorlage*
 |Wählst du eine xref:auftraege:auftraege-verwalten.adoc#295[Auftragsvorlage] als Standard-Auftragsvorlage, ist diese für den neuen Auftrag oder das Angebot standardmäßig vorausgewählt. Die Werte der gewählten Auftragsvorlage werden automatisch für den Auftrag oder das Angebot übernommen. Es können nur bereits angelegte Auftragsvorlagen gewählt werden. +
 Standardmäßig ist *Keine Auftragsvorlage vorausgewählt* gesetzt. Wählst du eine Auftragsvorlage als Standard aus und wird diese zu irgendeinem Zeitpunkt gelöscht, wird als Standard für diese Einstellung wieder *Keine* gesetzt.
@@ -1064,7 +1171,6 @@ Standardmäßig ist *Keine Auftragsvorlage vorausgewählt* gesetzt. Wählst du e
 |Wähle aus, welchen Typ von Warenkorb du in der Auftragserstellung nutzen möchtest. Standardmäßig ist der *Side cart* ausgewählt. Die Funktionen im Warenkorb sind bei beiden Typen gleich. +
 *Warenkorb als Side cart* = Der Warenkorb wird seitlich als Fenster dargestellt, wenn man ihn öffnet. +
 *Warenkorb als Tabelle (unterhalb der Suchergebnisse)* = Der Warenkorb wird als Tabelle unterhalb der Artikeltabelle (generiert durch die Artikelsuche) dargestellt.
-// TODO: side cart
 
 |*Filteroption ‚Nur vorrätige Artikel anzeigen‘ in der Artikelsuche vorausgewählt*
 |Aktiviere diese Option, damit sie für die Artikelsuche vorausgewählt ist. Angezeigt werden in den Suchergebnissen dann nur Artikel, die einen physischen Warenbestand haben.
@@ -1074,7 +1180,6 @@ Standardmäßig ist *Keine Auftragsvorlage vorausgewählt* gesetzt. Wählst du e
 
 |*Filteroption ‚Nur aktive Artikel anzeigen‘ in der Artikelsuche vorausgewählt*
 |Aktiviere diese Option, damit sie für die Artikelsuche vorausgewählt ist. Angezeigt werden in den Suchergebnissen dann nur xref:artikel:checkliste-artikel-anzeige.adoc#100[aktivierte Artikel].
-// TODO: alle xref prüfen/anpassen
 
 |*Filteroption ‚Nur Artikel mit gültigem Preis anzeigen‘ in der Artikelsuche vorausgewählt*
 |Aktiviere diese Option, damit sie für die Artikelsuche vorausgewählt ist. Angezeigt werden in den Suchergebnissen dann nur Artikel, die einen gültigen Preis hinterlegt haben.
@@ -1082,7 +1187,6 @@ Standardmäßig ist *Keine Auftragsvorlage vorausgewählt* gesetzt. Wählst du e
 |*Änderung der Mehrwertsteuersätze in der Artikelübersichtstabelle im letzten Schritt der Auftragserstellung erlauben.*
 |Durch Aktivierung dieser Option erlaubst du, dass vor dem Abschließen des Auftrages im letzten Schritt xref:auftraege:auftraege-verwalten.adoc#290[Übersicht] der Auftragsanlage Steuersätze geändert werden dürfen. Die Steuersätze richten sich dabei nach der Lieferadresse des Auftrages. +
 Diese Option ist standardmäßig deaktiviert. Lass sie deaktiviert, wenn du die Mehrwertsteuersätze in der Übersicht nur sichtbar, aber nicht bearbeitbar lassen möchtest.
-// TODO: alle xref prüfen/anpassen
 
 |*Anzeige von hinzugefügten Artikeln im Warenkorb*
 |Wähle aus, wie die Artikel zum Warenkorb hinzugefügt werden sollen. Die Standardeinstellung ist *Als eine Auftragsposition, Mengen werden erhöht*. +
@@ -1096,11 +1200,10 @@ Diese Option ist standardmäßig deaktiviert. Lass sie deaktiviert, wenn du die 
 
 == Auftragsübersicht
 
-Im Menü *Aufträge » Aufträge [Testphase]* steht dir die Übersicht deiner Aufträge zur Verfügung. Die Übersichtstabelle ist durchsuchbar und hat zwei Level. Im ersten Level werden dir grundlegende Auftragsinformationen angezeigt. Im zweiten Level werden dir grundlegende Informationen zu den Auftragspositionen angezeigt. Du kannst die Level ausklappen, indem du auf *Ausklappen* (icon:chevron_right[set=material]) klickst.
+Im Menü *Aufträge » Aufträge [Testphase]* steht dir die Übersicht deiner Aufträge zur Verfügung. Die Übersichtstabelle ist durchsuchbar und hat zwei Level. Im ersten Level werden dir grundlegende Auftragsinformationen angezeigt. Im zweiten Level werden dir grundlegende Informationen zu den Auftragspositionen angezeigt. Du kannst die Level ausklappen, indem du auf *Ausklappen* (icon:chevron_right[set=material]) klickst. In beiden Leveln kannst du die Übersicht auf deine Bedürfnisse anpassen.
 
 ////
 Auf dieser Handbuchseite erhältst du eine Übersicht über ...
-
 Tabellen individualisieren
 Auftragssuche
 Auftragspositionen
@@ -1113,7 +1216,7 @@ außerdem wird dir erklärt wie du ...
 == Menüaufbau
 
 Das Menü *Aufträge » Aufträge-UI* ist wie folgt aufgebaut:
-
+// TODO: alle xref anpassen
 image::auftraege:menue-uebersicht.png[]
 // TODO: passenden Screenshot erstellen und Ablauf prüfen
 
@@ -1131,30 +1234,26 @@ Hier führst du relevante Aktionen durch. Zum Beispiel:
 ** xref:artikel:detailansicht.adoc#1000[deine Änderungen an Aufträgen oder Varianten speichern].
 ////
 
+// TODO: alle xref anpassen
 * *Hauptfenster*:
 Hier wird der aktuell geöffnete Bereich angezeigt.
 ** *Übersicht*:
 Wenn du eine Suche ausführst, siehst du die xref:artikel:suchen.adoc#500[Ergebnisse in einer Übersicht].
 Die Übersicht liefert Informationen zu den gefundenen Aufträgen auf einen Blick.
-Zum Beispiel siehst du ein Bild des Auftrags, ob der ....
-//TODO: xref
-
 
 ** *Detailansicht*:
 Wenn du einen Auftrag öffnest, werden seine Details im Hauptfenster auf der rechten Seite angezeigt.
 Was aber, wenn das Hauptfenster leer ist?
 Oder was, wenn du mit der Anordnung der Auftragsdetails nicht zufrieden bist?
 Du kannst eine xref:artikel:detailansicht.adoc#200[neue Detailansicht erstellen] und sie an deine Bedürfnisse anpassen.
-//TODO: xref
-// TODO: Zahnrad
-Die Tabellenspalten sind für beide Level konfigurierbar. Beim ersten Öffnen wird dir jeweils die Standardansicht der Tabelle angezeigt. Durch Klicken auf Zahnrad (icon…) öffnet sich das Fenster mit der Auswahl Order table und Order item table. Darüber kannst über *Spalten konfigurieren* (icon:settings[set=material]) wählen, welche Spalten dir in welcher Reihenfolge angezeigt werden. Wähle
+
+Die Tabellenspalten sind für beide Level konfigurierbar. Beim ersten Öffnen wird dir jeweils die Standardansicht der Tabelle angezeigt. Durch Klicken auf icon:settings[set=material] öffnet sich das Fenster mit der Auswahl Tabelle Aufträge und Tabelle Auftragspositionen. Über *Spalten konfigurieren* (icon:settings[set=material]) kannst du wählen, welche Spalten du sehen möchstest und in welcher Reihenfolge sie angezeigt werden sollen.
 
 [.collapseBox]
 .*Spalten konfigurieren*
 --
-
+// TODO: alle xref anpassen
 Wenn du die Tabelle einmal angepasst hast, wird diese Auswahl gespeichert. Du kannst das Layout jederzeit ändern. Die zu Verfügung stehenden Spalten findest du in <<tabelle-auftragsuebersicht-auftragsinformationen>> sowie <<tabelle-auftragsuebersicht-auftragspositionen>>. Dort ist zu jeder Spalte auch die Information hinterlegt, ob es sich um eine Standardspalte handelt. Standardspalten werden angezeigt, wenn die Tabelle nicht konfiguriert ist. Gehe wie im Folgenden beschrieben vor, um die Tabelle anzupassen:
-//TODO: Link prüfen/anpassen
 
 [.instruction]
 Tabelle individualisieren:
@@ -1170,9 +1269,6 @@ Tabelle individualisieren:
 [TIP]
 Du kannst die Reihenfolge per Drag-and-drop mit einem Klick auf *Verschieben* (icon:drag_indicator[set=material]) verändern. Durch “Haken setzen oder herausnehmen” kannst du die Anzahl der Spalten verändern.
 
-
---
-
 Folgende Informationen werden dir in der Auftragstabelle angezeigt:
 
 [[tabelle-auftragsuebersicht-auftragsinformationen]]
@@ -1184,7 +1280,7 @@ Folgende Informationen werden dir in der Auftragstabelle angezeigt:
 |*Sperrstatus*
 |Zeigt, ob der Auftrag gesperrt ist oder nicht. Ein Auftrag wird gesperrt, sobald eine Rechnung erzeugt wurde. Eine Gutschrift wird gesperrt, sobald ein Gutschriftsdokument erzeugt wurde. Du kannst den Auftrag oder die Gutschrift entsperren, wenn du einen Stornobeleg für das jeweilige Dokument erzeugst. +
 Schloss geöffnet = Entsperrt
-Schloss geschlossen =  Reversibel gesperrt.
+(icon:lock_outline[set=material]) =  Reversibel gesperrt.
 Diese Spalte ist eine Standardspalte.
 
 |*Auftragstyp*
@@ -2131,66 +2227,3 @@ Bei dem Bearbeiten von Positionen im Auftrag kann man in der neuen UI nicht nur 
 Bei Standardeinstellung wird der ... Der manuelle Preis ...
 ////
 
-Portlet: Waren zurückbuchen
-//// 
-in Entwicklung, erklären lassen; siehe https://knowledge.plentymarkets.com/de-de/manual/main/warenwirtschaft/mhd-charge-verwalten.html und https://knowledge.plentymarkets.com/de-de/manual/main/warenwirtschaft/warenbestaende-verwalten.html#100 bzw. mdh_charge_verwalten.adoc
-
-Neuer Eintrag in der Seitennavigation = Waren zurückbuchen 
-Auftrag & Garantie: Only visible if a outgoing item is set, 
-Retoure: always visible
-
-siehe Bestand überwachen Kap. 4.1 MDH und Charge sowie Ware einbuchen
-//// 
-
-2+^| *Artikel*
-
-| *Auftragsmenge* (display field)
-|Die *Auftragsmenge* wird angezeigt.
-
-| *Offene Menge* (display field)
-|Die *Offene Menge* wird angezeigt.
-
-| *Charge* (display field)
-|Die
-
-| *Mindesthaltbarkeitsdatum (MHD)* (display field)
-|Die
-
-| *Artikel-ID* (display field)
-|Die *Artikel-ID* wird angezeigt.
-
-| *Varianten-ID* (display field)
-|Die *Varianten-ID* wird angezeigt.
-
-| *Variantenname* (display field)
-|Die *Variantenname* wird angezeigt.
-
-2+^| *Warenkorb*
-
-| *reverse* (display field)
-|Die
-(validation reverse cant be higher than "quantity in order" - "Open"
-
-| *Lager* (single select)
-|Die
-
-| *Lagerort* (see purchase order transactions)
-|Die
-
-| *Menge im Auftrag* (display field)
-|Die
-
-| *Charge* (display field)
-|Die
-
-| *Mindesthaltbarkeitsdatum (MHD)* (display field)
-|Die
-
-| *Artikel-ID* (display field)
-|Die *Artikel-ID* wird angezeigt.
-
-| *Varianten-ID* (display field)
-|Die *Varianten-ID* wird angezeigt.
-
-| *Variantenname* (display field)
-|Die *Variantenname* wird angezeigt.
